# Annif

./:  .readthedocs.yml  .codeclimate.yml  .codecov.yml  .coverage  .coveragerc  .dockerignore  .drone.yml  .git-blame-ignore-revs  .gitignore  .lgtm.yml  .readthedocs.yml  .scrutinizer.yml  .travis.yml  CITATION.cff  CONTRIBUTING.md  Dockerfile  Dockerfile-alpine  Dockerfile-apidata  Dockerfile-data  Dockerfile-dev  Dockerfile-optional-dependencies  Dockerfile-rsync  Dockerfile-server  Dockerfile-slim  LICENSE.txt  MANIFEST.in  Pipfile  README.md  SECURITY.md  annif.py  app.py  autopep8.sh  backends.cfg  bench-project.sh  config.py  creating-data-image-and-data-deployment.md  docker-compose-ai.finto.fi.yml  docker-compose-annif.dev.finto.fi.yml  docker-compose-api.annif.org.yml  docker-compose-portainer.yml  (+10 more)
.devcontainer/: activate_env.sh  devcontainer.json
.github/: dependabot.yml
.github/actions/prepare/: action.yml
.github/workflows/: cicd.yml  codeql.yml  cron-rebuild.yml  docker-rebuild.yml  model-compatibility.yml  python-package.yml
ai.finto.fi/: index.html
ai.finto.fi/static/css/: fonts.css
ai.finto.fi/static/js/: annif.js  global.js  i18n.js
annif/: __init__.py  annif.py  app.py  cli.py  cli_util.py  config.py  datadir.py  default_config.py  eval.py  exception.py  hfh_util.py  hit.py  langsupport.py  operations.py  parallel.py  project.py  registry.py  rest.py  simplemma_util.py  suggestion.py  transformer.py  util.py  views.py  vocab.py
annif-test-pypi/: exception.py  rest.py
annif-test-pypi/analyzer/: voikko.py
annif-test-pypi/backend/: dummy.py
annif-test-pypi/lexical/: mllm.py
annif.dev.finto.fi/: index.html
annif/analyzer/: __init__.py  analyzer.py  english.py  estnltk.py  finnish.py  simple.py  simplemma.py  snowball.py  spacy.py  swedish.py  voikko.py
annif/backend/: __init__.py  backend.py  doc2vec.py  dummy.py  ebm.py  embeddings.py  ensemble.py  fasttext.py  http.py  hyperopt.py  llm.py  llm_ensemble.py  lsi.py  maui.py  mauidir.py  mixins.py  mllm.py  nn_ensemble.py  omikuji.py  pav.py  rescorer.py  stwfsa.py  stwfsapy.py  svc.py  tfidf.py  vw.py  vw_base.py  vw_ensemble.py  vw_multi.py  xtransformer.py  yake.py
annif/corpus/: __init__.py  combine.py  convert.py  docdir.py  docfile.py  document.py  json.py  skos.py  subject.py  types.py
annif/lexical/: mllm.py  tokenset.py  util.py
annif/nginx/: Dockerfile  nginx.conf
annif/openapi/: annif.yaml  validation.py
annif/schemas/: document.json
annif/static/css/: fonts.css  style.css
annif/static/js/: annif.js
annif/swagger/: annif.yaml
annif/templates/: base.html  home.html  index.html  root.html
annif/transform/: __init__.py  inputlimiter.py  langfilter.py  select.py  transform.py
annif/transformer/: __init__.py  inputlimiter.py  langfilter.py  transformer.py
annif/vocab/: __init__.py  rules.py  skos.py  subject_file.py  subject_index.py  types.py  vocab.py
api/: index.html  static
api.annif.org/: index.html
api.annif.org/static/js/: jquery.min.map
benchmarks/20260120-124505-tensorflow/yso-nn_ensemble-en/: eval-j1.txt  eval-j6.txt  train-j1.txt
benchmarks/20260120-1245_yso-nn_ensemble-en_tensorflow/: train-j6.txt
benchmarks/20260120-153148-pytorch/yso-nn_ensemble-en/: eval-j1.txt  eval-j6.txt  train-j1.txt  train-j6.txt
benchmarks/20260122-1042_yso-nn_ensemble-en_pytorch/: eval-j1.txt  eval-j6.txt  train-j1.txt  train-j6.txt
benchmarks/20260122-1158_yso-nn_ensemble-en_tensorflow/: eval-j1.txt  eval-j6.txt  train-j1.txt  train-j6.txt
benchmarks/20260123-1419_yso-nn_ensemble-en_pytorch_reduced_mem_usage/: eval-j1.txt  eval-j6.txt  train-j1.txt  train-j6.txt
benchmarks/20260126-0958_yso-nn_ensemble-en/: eval-j6.txt  train-j6.txt
benchmarks/20260212-1052_yso-nn_ensemble-en/: eval-j1.txt  eval-j6.txt  train-j1.txt  train-j6.txt
bot/: index.html
bot/static/css/: bootstrap.min.css  (+1 more)
cgi-bin/: ocr.cgi
doc/: architecture.md  commands.md  corpus_formats.md
dockerfiles/: Dockerfile-matomo-importer  Dockerfile-svn-client
docs/: conf.py  index.rst  requirements.txt
docs/commands-wiki/: index.rst
docs/source/: annif.analyzer.rst  annif.backend.rst  annif.corpus.rst  annif.rst  commands.rst  modules.rst
mobile/: index.html
rsync-server/: Dockerfile-rsync  docker-entrypoint.sh
swagger/: annif.yaml  test.yaml
tests/: backends.cfg  check_model_compatibility.py  check_models_compatability_consistency.py  check_models_compatibility_consistency.py  check_models_reproducibility.py  conftest.py  dummy-nn-model.keras  projects-compatibility.cfg  projects-consistency.cfg  projects.cfg  projects.toml  projects_for_config_path_option.cfg  projects_invalid.cfg  projects_invalid2.cfg  test_analyzer.py  test_analyzer_estnltk.py  test_analyzer_simplemma.py  test_analyzer_spacy.py  test_analyzer_voikko.py  test_annif.py  test_app.py  test_backend.py  test_backend_ebm.py  test_backend_ensemble.py  test_backend_fasttext.py  test_backend_http.py  test_backend_lsi.py  test_backend_maui.py  test_backend_mllm.py  test_backend_nn_ensemble.py  test_backend_omikuji.py  test_backend_pav.py  test_backend_stwfsa.py  test_backend_stwfsapy.py  test_backend_svc.py  test_backend_tfidf.py  test_backend_vw.py  test_backend_vw_ensemble.py  test_backend_vw_multi.py  test_backend_xtransformer.py  (+29 more)
tests/compatibility/: eval.sh  projects.cfg  train.sh
tests/corpora/: dummy-subjects.csv  dummy-subjects.tsv
tests/huggingface-cache/: dummy-en.cfg  dummy-fi.cfg
tests/projects-all/: projects-base.cfg  projects-ensemble.cfg  projects-nontrainable.cfg
tests/projects-compatibility/: ensemble-fi.cfg  fasttext-fi.cfg  mllm-fi.cfg  nn-ensemble-fi.cfg  omikuji-parabel-fi.cfg  pav-fi.cfg  stwfsa-fi.cfg  svc-fi.cfg  tfidf-fi.cfg  yake-fi.cfg
tests/projects-consistency/: 0-fasttext-fi.cfg  0-mllm-fi.cfg  0-omikuji-parabel-fi.cfg  0-stwfsa-fi.cfg  0-svc-fi.cfg  0-tfidf-fi.cfg  1-nn-ensemble-fi.cfg  1-pav-fi.cfg
tests/projects-trainable/: projects-base.cfg  projects-ensemble.cfg
tests/projects.d/: projects.cfg  projects.toml
www/: accessibility.html  index.html
(+235 files in other folders)
