[project]
name = "annif"
version = "1.4.0"
description = "Automated subject indexing and classification tool"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10,<3.14"

authors = [
    {name = "National Library of Finland", email = "finto-posti@helsinki.fi"},
]
maintainers = [
    {name = "Osma Suominen", email = "osma.suominen@helsinki.fi"},
    {name = "Juho Inkinen", email = "juho.inkinen@helsinki.fi"},
    {name = "Mona Lehtinen", email = "mona.lehtinen@helsinki.fi"},
]
keywords = [
    "machine-learning",
    "text-classification",
    "multilabel-classification",
    "rest-api",
    "code4lib",
    "subject-indexing",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]

dependencies = [
    "click~=8.2.1",
    "click-log==0.4.*",
    "connexion[flask, uvicorn, swagger-ui]~=3.1.0",
    "gunicorn~=23.0.0",
    "huggingface-hub~=0.34.4",
    "joblib~=1.5.1",
    "jsonschema~=4.25.0",
    "nltk~=3.9.1",
    "numpy~=2.2.6",
    "optuna~=4.5.0",
    "python-dateutil==2.9.*",
    "simplemma~=1.1.1",
    "scikit-learn~=1.7.1",
    "scipy~=1.15.3",
    "requests~=2.32.3",
    "rdflib~=7.1.3",
    "tomli~=2.2.1; python_version<'3.11'",
]

[project.optional-dependencies]
fasttext = ["fasttext-numpy2==0.10.4"]
estnltk = ["estnltk==1.7.4"]
nn = ["tensorflow-cpu~=2.20.0", "lmdb~=1.7.3"]
omikuji = ["omikuji==0.5.*"]
spacy = ["spacy~=3.8.4"]
stwfsa = ["stwfsapy~=0.6.1"]
voikko = ["voikko==0.5.*"]
yake = ["yake~=0.6.0"]

[tool.poetry.group.dev.dependencies]
py = "*"
pytest = "8.*"
pytest-cov = "*"
pytest-watch = "*"
pytest-flask = "*"
flake8 = "*"
bumpversion = "*"
black = "25.*"
isort = "*"
schemathesis = "3.*.*"

[project.urls]
homepage = "https://annif.org"
repository = "https://github.com/NatLibFi/Annif"
documentation = "https://github.com/NatLibFi/Annif/wiki"

[project.scripts]
annif = "annif.cli:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = "88"
skip_gitignore = true

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
addopts = "-m 'not slow'"
