[project]
name = "annif"
version = "1.5.0-dev"
description = "Automated subject indexing and classification tool"
authors = [{ name = "National Library of Finland", email = "finto-posti@helsinki.fi" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = "Apache-2.0"
maintainers = [
    { name = "Osma Suominen", email = "osma.suominen@helsinki.fi" },
    { name = "Juho Inkinen", email = "juho.inkinen@helsinki.fi" },
    { name = "Mona Lehtinen", email = "mona.lehtinen@helsinki.fi" },
]
keywords = [
    "machine-learning",
    "text-classification",
    "multilabel-classification",
    "rest-api",
    "code4lib",
    "subject-indexing",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]
dependencies = [
    "click~=8.2.1",
    "click-log==0.4.*",
    "connexion[flask, uvicorn, swagger-ui]~=3.1.0",
    "gunicorn~=23.0.0",
    "huggingface-hub~=0.34.4",
    "joblib~=1.5.1",
    "jsonschema~=4.25.0",
    "nltk~=3.9.1",
    "numpy~=2.2.6",
    "optuna~=4.5.0",
    "python-dateutil==2.9.*",
    "simplemma~=1.1.1",
    "scikit-learn~=1.7.1",
    "scipy~=1.15.3",
    "requests~=2.32.3",
    "rdflib~=7.1.3",
    "tomli~=2.2.1; python_version<'3.11'",
]

[project.optional-dependencies]
fasttext = ["fasttext-numpy2==0.10.4"]
estnltk = ["estnltk==1.7.4"]
nn = [
    "torch~=2.9.1",
    "lmdb~=1.7.3",
]
torch-cpu = ["torch"]
torch-cu128 = ["torch"]
omikuji = ["omikuji==0.5.*"]
spacy = [
    "spacy~=3.8.4",
    "pip>=25.3",
]
stwfsa = ["stwfsapy~=0.6.1"]
voikko = ["voikko==0.5.*"]
yake = ["yake~=0.6.0"]

[project.urls]
homepage = "https://annif.org"
repository = "https://github.com/NatLibFi/Annif"
documentation = "https://github.com/NatLibFi/Annif/wiki"

[project.scripts]
annif = "annif.cli:cli"

[dependency-groups]
dev = [
    "py",
    "pytest==8.*",
    "pytest-cov",
    "pytest-watch",
    "pytest-flask",
    "flake8",
    "bumpversion",
    "black==25.*",
    "isort",
    "schemathesis==3.*",
]
all = ["annif[fasttext,estnltk,nn,omikuji,spacy,stwfsa,voikko,yake]"]

[tool.isort]
profile = "black"
line_length = "88"
skip_gitignore = true

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
addopts = "-m 'not slow'"

[tool.uv]
conflicts = [
  [
    { extra = "torch-cpu" },
    { extra = "torch-cu128" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu",    extra = "torch-cpu" },
  { index = "pytorch-cu128",  extra = "torch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
